<resources>
  <string name="app_name">Students App</string>
  <string name="cancel_label">Cancel</string>
  <string name="delete_label">Delete</string>
  <string name="save_label">Save</string>
  <string name="checked_label">Checked</string>
  <string name="student_id_label">Student ID</string>
  <string name="id_label">ID</string>
  <string name="student_name_hint">Student Name</string>
  <string name="student_name_label">Name</string>
  <string name="address_label">Address</string>
  <string name="phone_label">Phone</string>
  <string name="student_phone_number_hint">Student Phone Number</string>
  <string name="student_address_hint">Student Address</string>
</resources>